--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,12 +3,12 @@
     "name": "Blogi - El Blog del inicio",
     "icons": [
         {
-            "src": "../img/logo-192.png",
+            "src": "./img/logo-192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "../logo-192.png",
+            "src": "./logo-192.png",
             "sizes": "512x512",
             "type": "image/png"
         }
