--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "mongoose": "^6.0.10",
     "mongoose-paginate-v2": "^1.4.2",
     "nodemon": "^2.0.14",
-    "uuid": "^8.3.2"
+    "socket.io": "^4.4.0",
+    "urlsafe-base64": "^1.0.0",
+    "uuid": "^8.3.2",
+    "web-push": "^3.4.5"
   }
 }
