--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
     "short_name": "Blogi",
     "name": "Blogi - Tu compañero de vida",
     "description": "Blogi: Una demo o demostración de un blog en el que puedes para ver la calidad que consigues con nosotros al hacer para ti un sitio web. Y también puedes escribir en este blog para que nunca olvides tus recuerdos más importantes",
-    "start-url": "https://blogi-node.herokuapp.com/index.html",
+    "start_url": "/",
     "background_color": "white",
     "display": "fullscreen",
     "theme_color": "orange",
