--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-validator": "^6.13.0",
     "google-auth-library": "^7.10.0",
     "jsonwebtoken": "^8.5.1",
+    "mercadopago": "^1.5.9",
     "mongoose": "^6.0.10",
     "mongoose-paginate-v2": "^1.4.2",
     "nodemon": "^2.0.14",
